Feat: Se agregan los graficos del informe 2

--- a/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
@@ -37,6 +37,7 @@ library(dplyr)
 library(ggplot2)
 library(lubridate)
 library(gridExtra)
+library(cowplot)
 ```
 
 #  Análisis general de la Estructura Poblacional del Régimen
@@ -165,7 +166,7 @@ Graf1 <- rbind(
     title =
       "Distribución de Edades"
   ) +
-  theme_minimal()+
+  theme_cowplot()+
   coord_flip() +
   scale_fill_manual(
     name =
@@ -217,6 +218,8 @@ Graf1 <- rbind(
     caption =
       expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C.")
   )
+
+ggsave("Graf1.svg", plot = Graf1)
 ```
 
 
@@ -288,7 +291,7 @@ Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Coun
        x = "Edad",
        y = "Activos",
        fill = "Sexo") +
-  theme_minimal() +
+  theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
@@ -298,6 +301,8 @@ Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Coun
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
                     labels = c( "Mujeres","Hombres"))+
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf2.svg", plot = Graf2)
 ```
 
 Al 31 de diciembre de 2023 hay un total de 3.758 de cotizantes activos del fondo de pensiones, cuya distribución por sexo es la siguiente: 1.907 mujeres (50,75%) y 1.851 hombres (49,25%). 
@@ -346,13 +351,15 @@ Graf3 <- ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sex
        y = "Cantidad",
        fill = "Género") +
   scale_fill_manual(values = c("cadetblue3", "#2F4F4F"), labels = c("Mujeres", "Hombres")) +
-  theme_minimal() +
+  theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf3.svg", plot = Graf3)
 ```
 
 
@@ -407,7 +414,7 @@ Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count
        x = "Edad",
        y = "Pensionados",
        fill = "Sexo") +
-  theme_minimal() +
+  theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
@@ -417,6 +424,8 @@ Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
                     labels = c( "Mujeres","Hombres"))+
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf4.svg", plot = Graf4)
 ```
 
 \begin{wrapfigure}[9]{r}{0.5\textwidth}
@@ -446,13 +455,15 @@ Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo
        y = "Cantidad",
        fill = "Género") +
   scale_fill_manual(values = c("cadetblue3", "#2F4F4F"), labels = c("Mujeres", "Hombres")) +
-  theme_minimal() +
+  theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf5.svg", plot = Graf5)
 ```
 
 En cuanto al tipo de pensión, se observa que los pensionados por vejez son 236 (57.42%), seguidos por los de sucesión con 110 (26.76%) y, finalmente, los de invalidez con 65 (15.82%). Además, tanto en hombres como en mujeres, se mantiene esta distribución según lo refleja el gráfico 5. En la población masculina, destacan los pensionados por vejez, con 123 casos, lo que representa el 58.12% de los pensionados por vejez, así como los de sucesión, con 59 casos, lo que equivale al 54.64% de los pensionados por sucesión. La situación es diferente en el caso de las mujeres, donde destacan los pensionados por invalidez, con 34 casos, que constituyen el 52.30% de los pensionados por invalidez.
@@ -546,13 +557,15 @@ Graf6 <- ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = S
        y = "Cantidad",
        fill = "Género") +
   scale_fill_manual(values = c("cadetblue3", "#2F4F4F"), labels = c("Mujeres", "Hombres")) +
-  theme_minimal() +
+  theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf6.svg", plot = Graf6)
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE,fig.width=6, fig.height=4}
@@ -607,11 +620,13 @@ Graf7 <- ggplot(conteo_anual, aes(x = Año)) +
   geom_line(aes(y = bajas, color = "bajas")) +
   scale_color_manual(values = c("altas" = "#2F4F4F", "bajas" = "cadetblue3")) +
   labs(title = "Gráfico 7: Comportamiento de altas y bajas de los activos.", subtitle = "1994-2023", x = "Fecha", color = "Tipo", y = "Cantidad") +
-  theme_minimal() +
+  theme_cowplot() +
   theme(plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+
+ggsave("Graf7.svg", plot = Graf7)
 ```
 
 \begin{wrapfigure}[12]{r}{0.5\textwidth}
@@ -658,7 +673,7 @@ Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color 
        subtitle = "2001-2023",x = " Año de inicio de pago de la pensión",
        y = "Cantidad de personas pensionadas", color = "Tipo de pensión")+
   scale_color_manual(values = c("#2F4F4F", "cadetblue3", "#BCEE68"))+
-  theme_minimal()+
+  theme_cowplot()+
    theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
@@ -666,6 +681,7 @@ Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color 
         legend.title = element_blank()) +
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 
+ggsave("Graf8.svg", plot = Graf8)
 ```
 
 \begin{wrapfigure}[15]{r}{0.5\textwidth}
